network.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: localhost  # Change to your domain
    http:
      paths:
      - path: /home/kishore/Ecommerce-Website
        pathType: Prefix
        backend:
          service:
            name: website-service
            port:
              number: 80
